--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <h1>Mavaldi Rizqy Hazdi - 5025211086</h1>
+      <h2>Use MouseClick to Rotate</h2>
     </header>
 
     <main>
